# solo-sis-loader

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: flake8.yml  pytest.yml
docs/source/: conf.py  index.rst  installing.rst  requirements.txt
docs/source/examples/Basic_Plots/: README.txt  solo_sis_plot_histogram.py  solo_sis_plot_multi_species.py  solo_sis_plot_single_species.py
docs/source/examples/Utilites/: README.txt  solo_sis_load.py
solo_sis_loader/: __init__.py  version.py
solo_sis_loader/test/: conftest.py  solo_sis_loader_test.py
