[metadata]
name = solo_sis_loader
description = SolO-SIS-Loader: A python data loader for Suprathermal Ion Spectrograph (SIS) instrument onboard Solar Orbiter (SolO).
long_description = file: README.md
long_description_content_type = text/markdown
author = Athanasios Kouloumvakos
author_email = athkouloumvakos@gmail.com
license = GPL-3.0
license_files = LICENSE.md
url = https://github.com/AthKouloumvakos/solo-sis-loader
download_url = https://pypi.org/project/solo-sis-loader
project_urls=
  Source Code = https://github.com/AthKouloumvakos/solo-sis-loader
  Documentation = https://github.com/AthKouloumvakos/solo-sis-loader
  Issue Tracker = https://github.com/AthKouloumvakos/solo-sis-loader/issues
edit_on_github = True
github_project = AthKouloumvakos/solo-sis-loader
platform = any
keywords = science, solar physics, solar, sun, solar energetic particles
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics


[tool.setuptools_scm]
write_to = "solo_sis_loader/_version.py"


[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  cdflib
  numpy
  sunpy[net]
  sunpy-soar
  xarray
tests_require =
  pytest-astropy
  pytest-sugar


[options.extras_require]
test =
  pytest
  pytest-astropy
  pytest-sugar


[flake8]
max-line-length = 110
select = E101,E11,E111,E112,E113,E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E133,E20,E211,E225,E231,E241,E242,E251,E252,E26,E265,E266,E27,E301,E302,E303,E304,E305,E306,E401,E402,E502,E701,E711,E712,E713,E714,E722,E731,E901,E902,F401,F822,F823,F841,W191,W291,W292,W293,W391,W601,W602,W603,W604,W605,W690,
exclude =
    .git,
    __pycache__,
    docs,
    build,
    __init__.py
    .fits,
    .fts,
    .fit,
    .txt,
    .md,


[tool:pytest]
testpaths = "solo_sis_loader"
norecursedirs = "*.egg-info"
